--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -22,7 +22,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Artifactory</a>
+          <a class="navbar-brand em-text" href="index.html">Artifactory</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -33,6 +33,14 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
+
+    <div class="jumbotron">
+      <div class="container">
+        <h1>Welcome to the Artifactory!</h1>
+        <p>...</p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+      </div>
+    </div>
 
     <section>
 
