--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <div class="jumbotron">
       <div class="container">
-        <h1>Welcome to the Artifactory!</h1>
+        <h1>Artifactory Collections</h1>
         <p>...</p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
       </div>
