Added Jumbotron images

--- a/index.html
+++ b/index.html
@@ -36,11 +36,22 @@
 
     <div class="jumbotron">
       <div class="container">
-        <h1>Artifactory Collections</h1>
-        <p>...</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+        <div class = "row">
+          <div class="col-md-6">
+            <h1>Artifactory <span class="em-text">One</span></h1>
+            <p> A Platform for digital artifacts </p>
+            <a href="#"><img class="app-btn" src="img/icon_app_store.png"</a>
+            <a href="#"><img class="app-btn" src="img/icon_google_play.png"</a>
+      </div>
+      <div class="col-md-6">
+          <img class="showcase-img" src="img/site_phone.png">
+
+
+
+        </div>
       </div>
     </div>
+</div>
 
     <section>
 
