--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class = "row">
           <div class="col-md-6">
             <h1>Artifactory <span class="em-text">One</span></h1>
-            <p> A Platform for digital artifacts </p>
+            <p> A curation of digital artifacts. </p>
             <a href="#"><img class="app-btn" src="img/icon_app_store.png"</a>
             <a href="#"><img class="app-btn" src="img/icon_google_play.png"</a>
       </div>
